Added the correct abbreviation for each country

--- a/Tasks/geonamesExample/index.html
+++ b/Tasks/geonamesExample/index.html
@@ -16,9 +16,9 @@
 
 		<select id="selCountry">
 			<option value="GB">Great Britain</option>
-			<option value="FR">France</option>
+			<option value="AT">Austria</option>
 			<option value="DE">Germany</option>
-			<option value="India">India</option>
+			<option value="IN">India</option>
 		</select>
 
 		<!-- <select id="selLanguage">
