--- a/Project1/index.html
+++ b/Project1/index.html
@@ -140,6 +140,10 @@
 					<td>Symbol:</td>
 					<td id="txtCurrencySymbol" class="currencyTD"></td>
 				  </tr>
+				  <tr class="success currencyRow">
+					<td>Exchange Rate:</td>
+					<td id="txtExchangeRate" class="currencyTD"></td>
+				  </tr>
 				</tbody>
 			  </table>
 			</div>
@@ -164,10 +168,7 @@
 					<td>Title:</td>
 					<td id="txtTitle" class="newsTD"></td>
 				  </tr>
-				  <tr class="info newsRow">
-					<td>Keywords:</td>
-					<td id="txtKeywords" class="newsTD"></td>
-				  </tr>
+				  
 				  <tr class="success newsRow">
 					<td>Description:</td>
 					<td id="txtDescription" class="newsTD"></td>
@@ -226,6 +227,8 @@
     <div id="map" style="width:100%; height:100vh;"></div>
 	<script src="https://code.jquery.com/jquery-3.6.4.js"></script>
 	<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+	<script src="https://ernestoestrada.co.uk/gazetteer/assets/vendors/bootstrap-5.0.0-beta1-dist/js/bootstrap.min.js"></script>
+	<script src="https://ernestoestrada.co.uk/gazetteer/assets/vendors/Leaflet.EasyButton-master/src/easy-button.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@opencage/geosearch-bundle"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@opencage/leaflet-opencage-geosearch@0.0.17/leaflet-opencage-geosearch.js"></script>
 	<script type="text/javascript" src="js/fetchCountriesList.js"></script>
